# AtaxxDotCpp

./: .gitignore  README.md  changelog.md
src/: CMakeLists.txt  attacks.h  datagen.cpp  datagen.h  display.cpp  display.h  evaluation.cpp  evaluation.h  evaluation_hce.cpp  evaluation_hce.h  evaluation_nn.cpp  evaluation_nn.h  evaluation_nn_base.cpp  evaluation_nn_base.h  fens.cpp  fens.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  moveorder.cpp  moveorder.h  options.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  searchstate.h  timer.cpp  timer.h  types.h  uai.cpp  uai.h  zobrist.h
trainer/: CMakeLists.txt  main.cpp  test.cpp
